Update upload image

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=locket
 spring.jpa.hibernate.ddl-auto=create
+cloudinary.cloud-name=dqawcqjyi
+cloudinary.api-key=556581767336864
+cloudinary.api-secret=0uTU_h9HbjC2Vfp7ZikL0E141dg
+
