update list friend

--- a/Mobile/getx_clean_architecture-master/assets/env/.env.stg
+++ b/Mobile/getx_clean_architecture-master/assets/env/.env.stg
@@ -1,3 +1,4 @@
-BASE_URL='https://base_stag.com'
+BASE_URL='http://13.239.134.221:8080/api/v1/'
+BASE_URL_API: "http://13.239.134.221:8080/api/v1/"
 REVENUECAT_PUBLIC_KEY_ANDROID='public_key_android'
 REVENUECAT_PUBLIC_KEY_IOS='public_key_ios'
