--- a/Mobile/getx_clean_architecture-master/assets/env/.env.qa
+++ b/Mobile/getx_clean_architecture-master/assets/env/.env.qa
@@ -1,4 +1,4 @@
-BASE_URL='http://13.239.134.221:8080/api/v1/'
-BASE_URL_API: "http://13.239.134.221:8080/api/v1/"
+BASE_URL='http://13.211.227.100:8080/api/v1'
+BASE_URL_API="http://13.211.227.100:8080/api/v1"
 REVENUECAT_PUBLIC_KEY_ANDROID='public_key_android'
 REVENUECAT_PUBLIC_KEY_IOS='public_key_ios'
