--- a/Mobile/getx_clean_architecture-master/pubspec.yaml
+++ b/Mobile/getx_clean_architecture-master/pubspec.yaml
@@ -96,6 +96,7 @@ dependencies:
   flex_color_scheme: ^8.0.2
   collection: ^1.18.0
   path: ^1.8.2
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
