--- a/Mobile/getx_clean_architecture-master/pubspec.yaml
+++ b/Mobile/getx_clean_architecture-master/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: '>=3.0.5 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -97,6 +97,7 @@ dependencies:
   collection: ^1.18.0
   path: ^1.8.2
   flutter_easyloading: ^3.0.5
+  camera: ^0.11.0
 
 dev_dependencies:
   flutter_test:
