--- a/Mobile/getx_clean_architecture-master/pubspec.yaml
+++ b/Mobile/getx_clean_architecture-master/pubspec.yaml
@@ -97,7 +97,8 @@ dependencies:
   collection: ^1.18.0
   path: ^1.8.2
   flutter_easyloading: ^3.0.5
-  camera: ^0.11.0+2
+#  camera: ^0.11.0
+#  camera_android_camerax: ^0.6.10+3
 
 dev_dependencies:
   flutter_test:
