--- a/Mobile/getx_clean_architecture-master/pubspec.yaml
+++ b/Mobile/getx_clean_architecture-master/pubspec.yaml
@@ -97,6 +97,9 @@ dependencies:
   collection: ^1.18.0
   path: ^1.8.2
   flutter_easyloading: ^3.0.5
+  camera_android_camerax: 0.6.10+1
+  camera: ^0.11.0+2
+  flutter_inappwebview_android: ^1.1.3
 
 dev_dependencies:
   flutter_test:
