--- a/Mobile/getx_clean_architecture-master/pubspec.yaml
+++ b/Mobile/getx_clean_architecture-master/pubspec.yaml
@@ -100,6 +100,7 @@ dependencies:
   camera_android_camerax: 0.6.10+1
   camera: ^0.11.0+2
   flutter_inappwebview_android: ^1.1.3
+  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   flutter_test:
