--- a/Mobile/getx_clean_architecture-master/android/app/build.gradle
+++ b/Mobile/getx_clean_architecture-master/android/app/build.gradle
@@ -71,7 +71,7 @@ android {
             minifyEnabled false
         }
         release {
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
             shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
