--- a/Mobile/getx_clean_architecture-master/android/build.gradle
+++ b/Mobile/getx_clean_architecture-master/android/build.gradle
@@ -22,10 +22,24 @@ allprojects {
 }
 
 rootProject.buildDir = '../build'
+
+//subprojects {
+//    afterEvaluate { project ->
+//        if (project.plugins.hasPlugin("com.android.application") ||
+//                project.plugins.hasPlugin("com.android.library")) {
+//            project.android {
+//                compileSdkVersion 34
+//            }
+//        }
+//    }
+//}
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
     project.evaluationDependsOn(':app')
 }
 
