--- a/Mobile/getx_clean_architecture-master/pubspec.yaml
+++ b/Mobile/getx_clean_architecture-master/pubspec.yaml
@@ -90,7 +90,7 @@ dependencies:
   image_picker: ^0.8.6+1
   datetime_picker_formfield: ^2.0.1
   modal_bottom_sheet: ^2.1.2
-  flutter_native_image: ^0.0.6+1
+  flutter_native_image: 0.0.6+1
   flutter_native_splash: ^2.2.17
   delayed_display: ^2.0.0
   flex_color_scheme: ^8.0.2
@@ -101,7 +101,7 @@ dependencies:
   camera: ^0.11.0+2
   flutter_inappwebview_android: ^1.1.3
   flutter_image_compress: ^2.3.0
-
+  flutter_mailer: 2.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -132,25 +132,21 @@ flutter:
     - assets/fonts/
 
   fonts:
-    - family: SFProDisplay
+    - family: PlusJakartaSans
       fonts:
-        - asset: assets/fonts/SFProDisplay-Thin.ttf
-          weight: 100
-        - asset: assets/fonts/SFProDisplay-Ultralight.ttf
+        - asset: assets/fonts/PlusJakartaSans-ExtraLight.ttf
           weight: 200
-        - asset: assets/fonts/SFProDisplay-Light.ttf
+        - asset: assets/fonts/PlusJakartaSans-Light.ttf
           weight: 300
-        - asset: assets/fonts/SFProDisplay-Regular.ttf
+        - asset: assets/fonts/PlusJakartaSans-Regular.ttf
           weight: 400
-        - asset: assets/fonts/SFProDisplay-Medium.ttf
+        - asset: assets/fonts/PlusJakartaSans-Medium.ttf
           weight: 500
-        - asset: assets/fonts/SFProDisplay-Semibold.ttf
+        - asset: assets/fonts/PlusJakartaSans-SemiBold.ttf
           weight: 600
-        - asset: assets/fonts/SFProDisplay-Bold.ttf
+        - asset: assets/fonts/PlusJakartaSans-Bold.ttf
           weight: 700
-        - asset: assets/fonts/SFProDisplay-Black.ttf
-          weight: 800
-        - asset: assets/fonts/SFProDisplay-Heavy.ttf
+        - asset: assets/fonts/PlusJakartaSans-ExtraBold.ttf
           weight: 900
 
 flutter_intl:
